--- a/log4j/log4j2.properties
+++ b/log4j/log4j2.properties
@@ -37,8 +37,8 @@ advertiser = multicastdns
 #                Properties                  #
 ##############################################
 # 自定义属性变量，下面定义了两个变量：pro1、pro2
-property.pro1 = property_1
-property.pro2 = property_2
+property.pro1 = value_1
+property.pro2 = value_2
 
 
 
@@ -203,7 +203,8 @@ rootLogger.type = AsyncLogger
 # 是否包含记录器所在业务代码的位置信息（高开销）
 # 同步 logger 默认为 true，
 # 异步 logger 默认为 false，因为涉及位置信息快照在不同线程之间传递
-rootLogger.includeLocation = [true|false]
+rootLogger.includeLocation = [true|false
+# 默认为 error
 rootLogger.level = [off|fatal|error|warn|info|debug|trace|all]
 rootLogger.appenderRef.ap1.ref = xxx
 rootLogger.appenderRef.ap1.level = [off|fatal|error|warn|info|debug|trace|all]
