Add AOP to cut MyBatis DAO

--- a/spring-framework/src/main/resources/log4j2.properties
+++ b/spring-framework/src/main/resources/log4j2.properties
@@ -20,7 +20,7 @@ appender.console.filter.threshold.level = trace
 
 # ------------------------------------------------------------------------------------- loggers
 
-rootLogger.level = info
+rootLogger.level = INFO
 rootLogger.appenderRef.stdout.ref = STDOUT
 
 # ************* org.reion LOGGER **********************
