--- a/spring-framework/src/main/resources/jdbc.properties
+++ b/spring-framework/src/main/resources/jdbc.properties
@@ -11,4 +11,4 @@
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/demo?useUnicode=true&characterEncoding=utf-8&useSSL=true
 jdbc.username=root
-jdbc.password=reion
+jdbc.password=root
